# sec_filing_connector

./: .gitignore
sec_connector/: README.md  pyproject.toml
sec_connector/sec_connector/: __init__.py  cli.py  client.py  models.py
sec_connector/sec_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sec_connector/tests/fixtures/: company_tickers.json  filings_sample.json
