[project]
name = "sec-connector"
version = "0.1.0"
description = "A Python package for connecting to SEC data"
authors = [
    { name = "Sagnik Sinha", email = "ssinha348@gatech.edu" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"